--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
             background-color: rgba(0, 0, 0, 0.1);
             z-index: 998;
         }
+        @media only screen and (max-width: 600px) {
+    /* قواعد CSS لتطبيقها عند عرض الصفحة على الهواتف النقالة */
+    /* يمكنك تعديل القواعد حسب احتياجات تصميم موقعك */
+    body {
+        font-size: 14px; /* مثال: تغيير حجم الخط لتناسب شاشات الهواتف */
+        /* أضف أي تعديلات أخرى هنا */
+    }
+
+    /* إذا كنت بحاجة إلى قواعد CSS مختلفة لعناصر محددة، يمكنك أيضًا تحديدها هنا */
+}
+
     </style>
 </head>
 <body>
