--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
     <title>ppsspp game</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
         #iframe-container {
             position: relative;
             width: 100%;
-            padding-top: 56.25%; /* 16:9 Aspect Ratio (النسبة 9:16 لشاشات الهواتف) */
+            height: 3000vh;
             overflow: hidden;
         }
 
@@ -46,13 +41,6 @@
             background-color: rgba(0, 0, 0, 0.1);
             z-index: 998;
         }
-
-        @media only screen and (max-width: 600px) {
-            /* تعديلات CSS لعرض الموقع بشكل أفضل على شاشات الهواتف */
-            #iframe-container {
-                padding-top: 100%; /* تأكد من عرض الموقع بشكل كامل على شاشات الهواتف */
-            }
-        }
     </style>
 </head>
 <body>
@@ -61,16 +49,17 @@
         <div id="overlay" onclick="showCPALocker()"></div>
     </div>
 
-    <div id="cpa-locker-container">
-        <div id="cpa-locker-a7abfcc0-cdc9-11ee-8f98-0102081a66aa"></div>
-        <script type="text/javascript" id="cpljs-a7abfcc0-cdc9-11ee-8f98-0102081a66aa" src="//captchalocker.pl/iframeLoader/a7abfcc0-cdc9-11ee-8f98-0102081a66aa?"></script>
+<div  id="cpa-locker-container">
+        <div id="cpa-locker-e39bddf0-c36a-11ee-a123-57064eed21d5"></div>
+        <script type="text/javascript" id="cpljs-e39bddf0-c36a-11ee-a123-57064eed21d5" src="//captchalocker.pl/iframeLoader/e39bddf0-c36a-11ee-a123-57064eed21d5?"></script>
     </div>
 
-    <script>
-        function showCPALocker() {
-            var cpaLockerContainer = document.getElementById('cpa-locker-container');
-            cpaLockerContainer.style.display = 'block';
-        }
-    </script>
+<script>
+    function showCPALocker() {
+        var cpaLockerContainer = document.getElementById('cpa-locker-container');
+        cpaLockerContainer.style.display = 'block';
+    }
+</script>
+
 </body>
 </html>
