--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </style>
 </head>
 <body>
-    <div id="iframe-container">
-        <iframe id="game-iframe" src="https://apkmacy.com/ppsspp-gta-5"></iframe>
-        <div id="overlay" onclick="showCPALocker()"></div>
+   <div  id="cpa-locker-container">
+        <div id="cpa-locker-e39bddf0-c36a-11ee-a123-57064eed21d5"></div>
+        <script type="text/javascript" id="cpljs-e39bddf0-c36a-11ee-a123-57064eed21d5" src="//captchalocker.pl/iframeLoader/e39bddf0-c36a-11ee-a123-57064eed21d5?"></script>
     </div>
 
 
