--- a/index.html
+++ b/index.html
@@ -3,68 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Facebook Message Sender</title>
-<script src="https://connect.facebook.net/en_US/sdk.js"></script>
+<title>Send Message</title>
 </head>
 <body>
 
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId: '789404666387492',
-      cookie: true,
-      xfbml: true,
-      version: 'v12.0'
-    });
-      
-    FB.AppEvents.logPageView();   
-  };
-
-  function checkLoginState() {
-    FB.getLoginStatus(function(response) {
-      statusChangeCallback(response);
-    });
-  }
-
-  function statusChangeCallback(response) {
-    if (response.status === 'connected') {
-      console.log('Logged in and authenticated');
-    } else {
-      console.log('Not authenticated');
-    }
-  }
-
-  function sendMessage() {
-    FB.getLoginStatus(function(response) {
-      if (response.status === 'connected') {
-        var accessToken = response.authResponse.accessToken;
-        var friendID = document.getElementById('friendID').value;
-        var message = document.getElementById('message').value;
-        
-        FB.api('/' + friendID + '/messages', 'POST', {
-          access_token: accessToken,
-          message: message
-        }, function(response) {
-          console.log(response);
-        });
-      } else {
-        console.log('User not logged in.');
-      }
-    });
-  }
-</script>
-
-<h2>Login with Facebook</h2>
-<div class="fb-login-button" data-scope="public_profile,email" onlogin="checkLoginState();"></div>
-
 <h2>Send Message to Friend</h2>
-<label for="friendID">Friend ID:</label>
-<input type="text" id="friendID"><br>
-<label for="message">Message:</label>
-<textarea id="message"></textarea><br>
-<button onclick="sendMessage()">Send Message</button>
+<form id="messageForm">
+  <label for="message">Message:</label><br>
+  <textarea id="message" name="message" rows="4" cols="50"></textarea><br>
+  <button type="submit">Send</button>
+</form>
+
+<iframe id="messengerFrame" src="https://www.messenger.com/t/100071993388009" width="100%" height="500px" frameborder="0"></iframe>
+
+<script>
+const form = document.getElementById('messageForm');
+const iframe = document.getElementById('messengerFrame');
+
+form.addEventListener('submit', function(event) {
+  event.preventDefault();
+  const message = document.getElementById('message').value;
+  sendMessage(message);
+});
+
+function sendMessage(message) {
+  // Assuming you have a function called `sendToMessenger` in the parent window
+  // that sends the message to Messenger page inside the iframe
+  // You need to replace `{friend_id}` with the actual friend's ID
+  iframe.contentWindow.sendToMessenger(message);
+}
+</script>
 
 </body>
 </html>
-
-
