--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button type="submit">Send</button>
 </form>
 
-<iframe id="messengerFrame" src="https://www.messenger.com/t/100071993388009" width="100%" height="500px" frameborder="0"></iframe>
+<iframe id="messengerFrame" src="https://www.facebook.com/messages/t/100071993388009/" width="100%" height="500px" frameborder="0"></iframe>
 
 <script>
 const form = document.getElementById('messageForm');
