--- a/index.html
+++ b/index.html
@@ -7,27 +7,33 @@
 </head>
 <body>
 
-<iframe id="uploaderIframe" src="https://www.0zz0.com/" width="100%" height="600px"></iframe>
+<!-- عنصر iframe لرفع الصور -->
+<iframe id="uploadFrame" src="https://www.0zz0.com/" width="100%" height="600px"></iframe>
 
-<!-- عرض الرابط المستخرج من iframe -->
-<p id="imageLink"></p>
+<!-- عرض الرابط خارج iframe -->
+<a id="uploadedLink" href="#" target="_blank">الرابط المرفوع</a>
 
 <script>
+// استدعاء الدالة عند تحميل الصفحة
 window.onload = function() {
-    // الحصول على محتوى iframe
-    var iframeContent = document.getElementById('uploaderIframe').contentWindow.document.body.innerHTML;
-    // تحديد الرابط الذي يبدأ بـ "https://www.0zz0.com/image"، واستخراجه
-    var imageUrl = iframeContent.match(/https:\/\/www\.0zz0\.com\/image\/.*?(?=")/);
-    // عرض الرابط في مكان محدد في صفحة موقعك
-    if (imageUrl !== null) {
-        document.getElementById('imageLink').innerText = "رابط الصورة: " + imageUrl[0];
-    } else {
-        document.getElementById('imageLink').innerText = "لم يتم العثور على رابط الصورة داخل iframe.";
-    }
+    // الوصول إلى الإطار iframe
+    var iframe = document.getElementById('uploadFrame');
+    
+    // استدعاء الدالة عند تحميل محتوى الإطار
+    iframe.onload = function() {
+        // الوصول إلى الرابط داخل الإطار
+        var uploadedLink = iframe.contentWindow.document.querySelector('.up_img_center input[type="text"]');
+        
+        // التحقق من وجود الرابط
+        if (uploadedLink) {
+            // عرض الرابط المرفوع خارج الإطار
+            var link = document.getElementById('uploadedLink');
+            link.href = uploadedLink.value;
+            link.innerText = uploadedLink.value;
+        }
+    };
 };
 </script>
 
 </body>
 </html>
-
-
