--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 
 
-<iframe src="https://app.site123.com/manager/login/sign_up.php?l=ar" width="100%" height="600px"></iframe>
+<iframe src="https://www.ailandingpagegenerator.com/?ref=futuretools.io" width="100%" height="600px"></iframe>
 
 </body>
 </html>
+
 
