--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>عرض موقع آخر</title>
+<title>ميزان خفيف</title>
+
+
 </head>
 <body>
-<div id="content"></div>
 
-<script>
-fetch('https://www.ailandingpagegenerator.com/')
-  .then(response => response.text())
-  .then(data => {
-    document.getElementById('content').innerHTML = data;
-  })
-  .catch(error => {
-    console.error('حدث خطأ في جلب المحتوى:', error);
-  });
-</script>
+
+<iframe src="https://www.ailandingpagegenerator.com" width="100%" height="600px"></iframe>
+
 </body>
 </html>
