--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ميزان خفيف</title>
-
-
 </head>
 <body>
-
-
-<iframe src="https://www.ailandingpagegenerator.com" width="100%" height="600px"></iframe>
-
+<iframe src="https://www.ailandingpagegenerator.com" width="100%" height="600px" style="border:none;" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
 </body>
 </html>
+
