--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FTP File Upload</title>
+    <title>File Upload Form</title>
 </head>
 <body>
-    <h1>FTP File Upload</h1>
+    <h2>Upload a File</h2>
     <form action="upload.php" method="post" enctype="multipart/form-data">
-        <label for="file">Select file:</label>
-        <input type="file" name="file" id="file"><br><br>
+        <label for="file">Select file to upload:</label><br>
+        <input type="file" name="file" id="file"><br>
         <input type="submit" value="Upload File" name="submit">
     </form>
 </body>
 </html>
-
-
-
-
-
