--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         
         .button {
-            background-color: #c9e6c6;
+            background-color: #65a65c;
             border: none;
             color: white;
             padding: 15px 32px;
@@ -29,10 +29,11 @@
             margin: 4px 2px;
             cursor: pointer;
             border-radius: 8px;
+            transition: background-color 0.3s ease;
         }
 
-        .button.active {
-            background-color: #65a65c;
+        .button:hover {
+            background-color: #4caf50;
         }
         
         input[type="text"] {
@@ -71,12 +72,39 @@
         #recipe-list {
             text-align: center;
             margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
-        #recipe-list img {
+        .recipe-item {
             width: 300px;
-            height: auto;
             margin: 10px;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: #f9f9f9;
+            transition: box-shadow 0.3s ease;
+        }
+
+        .recipe-item:hover {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        .recipe-img {
+            width: 100%;
+            border-radius: 8px;
+            margin-bottom: 10px;
+        }
+
+        .recipe-title {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+
+        .recipe-details {
+            font-size: 16px;
+            color: #555;
         }
     </style>
 </head>
@@ -109,7 +137,7 @@
             const ingredients = document.getElementById("ingredients-input").value;
             const time = document.getElementById("time-range").value;
 
-            fetch(`https://api.edamam.com/search?q=${ingredients}&app_id=${appId}&app_key=${appKey}`)
+            fetch(`https://api.edamam.com/search?q=${ingredients}&app_id=${appId}&app_key=${appKey}&time=${time}`)
                 .then(response => response.json())
                 .then(data => {
                     const recipeList = document.getElementById("recipe-list");
@@ -118,18 +146,15 @@
                     data.hits.forEach(hit => {
                         const recipe = hit.recipe;
                         const recipeItem = document.createElement("div");
+                        recipeItem.classList.add("recipe-item");
                         recipeItem.innerHTML = `
-                            <h3>${recipe.label}</h3>
-                            <img src="${recipe.image}" alt="${recipe.label}">
-                            <p>وقت التحضير: ${recipe.totalTime} دقيقة</p>
-                            <p>المكونات:</p>
-                            <ul>
+                            <img class="recipe-img" src="${recipe.image}" alt="${recipe.label}">
+                            <h3 class="recipe-title">${recipe.label}</h3>
+                            <p class="recipe-details">وقت التحضير: ${recipe.totalTime} دقيقة</p>
+                            <p class="recipe-details">المكونات:</p>
+                            <ul class="recipe-details">
                                 ${recipe.ingredientLines.map(ingredient => `<li>${ingredient}</li>`).join('')}
                             </ul>
-                            <p>طريقة التحضير:</p>
-                            <ol>
-                                ${recipe.ingredientLines.map(instruction => `<li>${instruction}</li>`).join('')}
-                            </ol>
                         `;
                         recipeList.appendChild(recipeItem);
                     });
@@ -143,6 +168,7 @@
     </script>
 </body>
 </html>
+
 
 
 
